--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@
 nav {
     display: flex;
     justify-content: space-between;
-    margin:52px 127px 0 135px ;
+    margin: 52px 127px 0 135px;
     padding-bottom: 50px;
 }
 
 nav ul {
     display: flex;
     gap: 44px;
-    
+
 }
 
 nav ul li {
@@ -43,11 +43,72 @@ nav li a {
 .tour {
     color: #FF5400;
 }
-.home{
+
+.home {
     color: #FF5400;
     font-weight: 700;
 }
-.bar{display:none;}
+
+.bar {
+    display: none;
+}
+
+
+.banner {
+    background-image: url("/Images/Group\ 13\ \(1\)\ \(1\).png");
+    background-repeat: no-repeat;
+    border-radius: 16px;
+    width: 1170px;
+    height: 500px;
+    text-align: center;
+    color: #FFF;
+    font-family: Mulish;
+    margin-left: 135px;
+    margin-right: 135px padding-bottom: 100px;
+}
+
+.banner-title {
+    padding: 106px 287px 0 287px;
+    font-size: 64px;
+    font-weight: 800;
+}
+
+.banner p {
+    padding-bottom: 48px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.banner-input {
+    display: inline-flex;
+    padding: 16px;
+    align-items: flex-start;
+    gap: 24px;
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.30);
+    color: rgba(19, 19, 24, 0.50);
+}
+
+.banner-input input,
+select {
+    width: 174px;
+    height: 52px;
+    border-radius: 8px;
+
+}
+
+.input-text {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+#find {
+    color: #FFF;
+    background-color: #FF5400;
+    font-weight: 700;
+    text-align: center;
+}
 
 
 
@@ -61,20 +122,61 @@ nav li a {
 
 
 
-        /*  Responsive style part   */
+/*  Responsive style part   */
 
 @media screen and (max-width:600px) {
-    nav ul{display: none;}
-    nav{
+    nav ul {
+        display: none;
+    }
+
+    nav {
         text-align: left;
         display: flex;
         margin-left: 20px;
         margin-right: 0px;
     }
-    .bar{
-        display:flex;
-        margin-right:20px ;
-        
+
+    .bar {
+        display: flex;
+        margin-right: 20px;
     }
+
+    .banner {
+        width: 335px;
+        height: 483px;
+        align-items: center;
+        margin-left: 20px;
+        margin-right: 20px;
+        background-position: center;
+    }
+
+    .banner-title {
+        font-size: 22px;
+        padding: 32px 64px 8px 66px;
+    }
+
+    .banner p {
+        font-size: 14px;
+        line-height: 21px;
+        padding: 0 16px 0 16px;
+    }
+
+    .banner-input {
+        gap: 16px;
+        flex-direction: column;
+        padding: 16px;
+        align-items: center;
+    }
+
+    .input-text {
+        width: 255px;
+        height: 52px;
+    }
+    .banner-input input{
+        width: 255px;
+        height: 52px;
+    }
+
+
 
 }
