--- a/style.css
+++ b/style.css
@@ -111,9 +111,57 @@ select {
 }
 
 
+/* popular section style  */
 
+.popular {
+    display: flex;
+    margin-left: 135px;
+    margin-right: 135px;
+}
 
+.popular-title {
+    color: #131318;
+    font-family: Mulish;
+    font-size: 40px;
+    font-weight: 800;
+}
 
+.popular-details {
+    color: rgba(19, 19, 24, 0.70);
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+}
+
+.popular-details-end {
+    color: #5A5A5D;
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    padding-bottom: 32px;
+}
+
+.popular-writings {
+    padding-top: 100px;
+}
+
+.btn-primary {
+    border-radius: 8px;
+    background: #FF5400;
+    color: #FFF;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 20px;
+    font-weight: 800;
+    padding: 14px 35px;
+}
+
+.popular-img {
+    padding-top: 100px;
+    padding-left: 60px;
+}
 
 
 
@@ -172,9 +220,32 @@ select {
         width: 255px;
         height: 52px;
     }
-    .banner-input input{
+
+    .banner-input input {
         width: 255px;
         height: 52px;
+    }
+
+    .popular {
+        display: grid;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .popular--writings {
+        padding-top: 24px;
+    }
+
+    .popular-img {
+        padding-top: 24px;
+        width: 335px;
+        height: 342px;
+        padding-left: 20px;
+        display: flex;
+    }
+
+    .popular-details-end {
+        padding-bottom: 24px;
     }
 
 
