--- a/style.css
+++ b/style.css
@@ -263,7 +263,6 @@ select {
     border-radius: 16px;
     border: 1px solid #FF5400;
     padding: 40px;
-
 }
 
 .n-title {
@@ -346,8 +345,48 @@ form input {
     font-weight: 800;
 }
 
+/* footer style part */
 
+footer {
+    width: 1440px;
+    height: 502px;
+    background: rgba(19, 19, 24, 0.05);
+    text-align: center;
+}
 
+footer .nav-title {
+    padding-top: 110px;
+    padding-bottom: 15px;
+}
+
+.footer-description {
+    color: #5A5A5D;
+    font-family: Mulish;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    padding-bottom: 33px;
+}
+
+.icon {
+    padding-bottom: 50px;
+    gap: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.line2 {
+    width: 872px;
+    height: 1px;
+}
+
+.end {
+    padding-top: 50px;
+    color: #131318;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 300;
+}
 
 
 
@@ -502,20 +541,49 @@ form input {
         width: 335px;
         height: 353px;
     }
+
     form input {
         width: 288px;
     }
-    .discount-title h3{
+
+    .discount-title h3 {
         font-size: 20px;
     }
-    .discount-title p{
+
+    .discount-title p {
         font-size: 15px;
     }
 
+    footer {
+        width: 375px;
+        height: 309px;
+    }
+
+    footer .nav-title {
+        font-size: 21px;
+        padding-top: 33px;
+    }
+
+    .footer-description {
+        padding-bottom: 16px;
+    }
+
+    .icon {
+        padding-bottom: 16px;
+    }
+
+    .line2 {
+        width: 335px;
+    }
+
+    .end {
+        padding-top: 10px;
+       
 
 
 
 
 
 
-}
+
+    }
